# rust-stdout-vs-stderr

./: Cargo.toml  README.md  run-profiler.sh
.github/workflows/: ci.yml
src/: simple-tui.rs  stdout-vs-stderr-all.rs  stdout-vs-stderr-profiler.rs  stdout-vs-stderr.rs
src/bonus/: raw-fd-exploit.rs  snowfall.rs
src/unbuffered/: raw-stdout-1.rs  raw-stdout-2.rs  raw-stdout-broken.rs
src/writer/: block-buffered-stdout.rs  bufwriter.rs  linewriter.rs
