[package]
name = "rust-stdout-vs-stderr"
version = "0.1.0"
description = "Benchmarks for comparing the speed of stdout vs stderr & code snippets for my blog post"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
default-run = "stdout-vs-stderr-all"

[[bin]]
name = "stdout-vs-stderr-all"
path = "src/stdout-vs-stderr-all.rs"

[[bin]]
name = "simple-tui"
path = "src/simple-tui.rs"

[[bin]]
name = "stdout-vs-stderr"
path = "src/stdout-vs-stderr.rs"

[[bin]]
name = "stdout-vs-stderr-profiler"
path = "src/stdout-vs-stderr-profiler.rs"

[[bin]]
name = "linewriter"
path = "src/writer/linewriter.rs"

[[bin]]
name = "bufwriter"
path = "src/writer/bufwriter.rs"

[[bin]]
name = "block-buffered-stdout"
path = "src/writer/block-buffered-stdout.rs"

[[bin]]
name = "raw-fd-exploit"
path = "src/bonus/raw-fd-exploit.rs"

[[bin]]
name = "raw-stdout-1"
path = "src/unbuffered/raw-stdout-1.rs"

[[bin]]
name = "raw-stdout-2"
path = "src/unbuffered/raw-stdout-2.rs"

[[bin]]
name = "raw-stdout-broken"
path = "src/unbuffered/raw-stdout-broken.rs"

[[bin]]
name = "snowfall"
path = "src/bonus/snowfall.rs"

[dependencies]
ratatui = "0.27.0"
crossterm = "0.27.0"
anyhow = "1.0.88"
enum-iterator = "2.1.0"
lazy_static = "1.5.0"
palette = "0.7.6"
rand = "0.8.5"

[profile.profiling]
inherits = "release"
debug = true
